# life-os-tasks

./: .dockerignore  .env.example  .gitignore  AI_SYSTEM_DESIGN_SUMMARY.md  CLAUDE.md  Dockerfile  Makefile  SECOND_BRAIN.md  STAGE10_DECISION_GATE.md  STAGE10_ETHICS_AND_INVARIANTS.md  STAGE10_OBSERVATION_TEMPLATE.md  STAGE10_README.md  STAGE8_SUMMARY.md  STAGE9_DEPLOYMENT_CHECKLIST.md  STAGE9_OBSERVATION_LOG.md  STAGE9_POSTMORTEM.md  STAGE9_SETUP.md  STAGE9_SUMMARY.md  SYSTEM_INVARIANTS.md  WARP.md  docker-compose.yml  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: ci-add-workflow.md
.github/workflows/: ci.yml
app/: api_export.py  api_review.py  ingest_dictation.py  ingest_slack.py  main.py  worker.py
app/ai/: __init__.py  contract.py  factory.py  prompts.py  protocol.py
app/ai/providers/: __init__.py  claude_suggester.py  openai_suggester.py
app/core/: db.py  logging_config.py  queue.py  security.py  summarizer.py
app/models/: ai_suggestion.py  raw_event.py  review_action.py  summary.py  task.py  task_candidate.py
lifeos_tasks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 000_initial_schema.sql  001_stage8_audit_and_lifecycle.sql  002_stage9_ai_suggestions.sql  README.md
static/: app.js  focus-trap.js  index.html  style.css
tests/: conftest.py  test_api.py  test_contract.py  test_export_import.py  test_factory.py  test_import_edgecases.py  test_import_invalid.py  test_import_overrides.py  test_prompts.py  test_stage9_safety.py
