[project]
name = "lifeos-tasks"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1"
]

[project.optional-dependencies]
ai = [
  "openai>=1.0",
  "anthropic>=0.18"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
