[project]
name = "lifeos-tasks"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0"
]

[project.optional-dependencies]
ai = [
  "openai>=1.0",
  "anthropic>=0.18"
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-redis>=4.6"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
